--- a/tests/notebooks/test_oligo_specificity_filter.ipynb
+++ b/tests/notebooks/test_oligo_specificity_filter.ipynb
@@ -132,7 +132,7 @@
     "res = exactmatch_filter.apply(sequence_type, oligo_database_exact_match, 2)\n",
     "\n",
     "assert \"WASH7P::2\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered from exact matches!\"\n",
-    "assert \"AGRN::1\" not in res.database[\"AGRN\"].keys(), \"A matching oligo has not been filtered from exact mathces!\""
+    "assert \"AGRN::1\" in res.database[\"AGRN\"].keys(), \"A non-matching oligo has been filtered from exact mathces!\""
    ]
   },
   {
@@ -144,26 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_database = ReferenceDatabase(dir_output=dir_output)\n",
-    "reference_database.load_sequences_fom_fasta(file_fasta=file_database_reference, database_overwrite=True)"
+    "reference_database.load_sequences_from_fasta(file_fasta=file_database_reference, database_overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,26 +188,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
       "  warnings.warn(\"Overwriting database!\")\n"
      ]
     }
    ],
    "source": [
     "reference_database_ligation = ReferenceDatabase(dir_output=dir_output)\n",
-    "reference_database_ligation.load_sequences_fom_fasta(file_fasta=file_database_reference_ligation, database_overwrite=True)"
+    "reference_database_ligation.load_sequences_from_fasta(file_fasta=file_database_reference_ligation, database_overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,18 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reference_database = ReferenceDatabase(dir_output=dir_output)\n",
     "reference_database.load_sequences_fom_fasta(file_fasta=file_database_reference, database_overwrite=True)"
@@ -278,20 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "# reads processed: 1\n",
-      "# reads with at least one alignment: 1 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 1 alignments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sequence_type = \"target\"\n",
     "\n",
@@ -306,20 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "# reads processed: 1\n",
-      "# reads with at least one alignment: 0 (0.00%)\n",
-      "# reads that failed to align: 1 (100.00%)\n",
-      "No alignments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sequence_type = \"target\"\n",
     "\n",
@@ -334,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,18 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "exactmatch_filter = ExactMatchFilter()\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -399,25 +350,16 @@
     "cross_hyb_filter = CrossHybridizationFilter(policy, exactmatch_filter, dir_output)\n",
     "res = cross_hyb_filter.apply(sequence_type, oligo_database_exact_match, 2)\n",
     "\n",
-    "assert \"WASH7P::1\" in res.database[\"WASH7P\"].keys(), \"A non matching oligo has been filtered by exact matches!\"\n",
-    "assert \"WASH7P::2\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered by exact mathces!\"\n",
+    "assert \"WASH7P::1\" not in res.database[\"WASH7P\"].keys(), \"A non matching oligo has been filtered by exact matches!\"\n",
+    "assert \"WASH7P::3\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered by exact mathces!\"\n",
     "assert \"AGRN::1\" in res.database[\"AGRN\"].keys(), \"A non matching oligo has been filtered by exact matches!\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "blast_filter = BlastNFilter(blast_search_parameters_crosshyb, blast_hit_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -436,18 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "blast_filter = BlastNFilter(blast_search_parameters_crosshyb, blast_hit_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByDegreePolicy()\n",
@@ -466,30 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n",
-      "# reads processed: 8\n",
-      "# reads with at least one alignment: 4 (50.00%)\n",
-      "# reads that failed to align: 4 (50.00%)\n",
-      "Reported 4 alignments\n",
-      "# reads processed: 7\n",
-      "# reads with at least one alignment: 2 (28.57%)\n",
-      "# reads that failed to align: 5 (71.43%)\n",
-      "Reported 2 alignments\n",
-      "# reads processed: 5\n",
-      "# reads with at least one alignment: 3 (60.00%)\n",
-      "# reads that failed to align: 2 (40.00%)\n",
-      "Reported 4 alignments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bowtie_filter = BowtieFilter(bowtie_search_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -508,30 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n",
-      "# reads processed: 8\n",
-      "# reads with at least one alignment: 4 (50.00%)\n",
-      "# reads that failed to align: 4 (50.00%)\n",
-      "Reported 4 alignments\n",
-      "# reads processed: 7\n",
-      "# reads with at least one alignment: 2 (28.57%)\n",
-      "# reads that failed to align: 5 (71.43%)\n",
-      "Reported 2 alignments\n",
-      "# reads processed: 5\n",
-      "# reads with at least one alignment: 3 (60.00%)\n",
-      "# reads that failed to align: 2 (40.00%)\n",
-      "Reported 4 alignments\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bowtie_filter = BowtieFilter(bowtie_search_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByDegreePolicy()\n",
