--- a/tests/notebooks/test_oligo_specificity_filter.ipynb
+++ b/tests/notebooks/test_oligo_specificity_filter.ipynb
@@ -144,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    }
+   ],
    "source": [
     "reference_database = ReferenceDatabase(dir_output=dir_output)\n",
     "reference_database.load_sequences_from_fasta(file_fasta=file_database_reference, database_overwrite=True)"
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,19 +259,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    }
+   ],
    "source": [
     "reference_database = ReferenceDatabase(dir_output=dir_output)\n",
-    "reference_database.load_sequences_fom_fasta(file_fasta=file_database_reference, database_overwrite=True)"
+    "reference_database.load_sequences_from_fasta(file_fasta=file_database_reference, database_overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "# reads processed: 1\n",
+      "# reads with at least one alignment: 1 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 1 alignments\n"
+     ]
+    }
+   ],
    "source": [
     "sequence_type = \"target\"\n",
     "\n",
@@ -277,9 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "# reads processed: 1\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 1 (100.00%)\n",
+      "No alignments\n"
+     ]
+    }
+   ],
    "source": [
     "sequence_type = \"target\"\n",
     "\n",
@@ -294,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,9 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    }
+   ],
    "source": [
     "exactmatch_filter = ExactMatchFilter()\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -357,9 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    }
+   ],
    "source": [
     "blast_filter = BlastNFilter(blast_search_parameters_crosshyb, blast_hit_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -378,9 +436,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    }
+   ],
    "source": [
     "blast_filter = BlastNFilter(blast_search_parameters_crosshyb, blast_hit_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByDegreePolicy()\n",
@@ -399,9 +466,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n",
+      "# reads processed: 8\n",
+      "# reads with at least one alignment: 4 (50.00%)\n",
+      "# reads that failed to align: 4 (50.00%)\n",
+      "Reported 4 alignments\n",
+      "# reads processed: 7\n",
+      "# reads with at least one alignment: 2 (28.57%)\n",
+      "# reads that failed to align: 5 (71.43%)\n",
+      "Reported 2 alignments\n",
+      "# reads processed: 5\n",
+      "# reads with at least one alignment: 3 (60.00%)\n",
+      "# reads that failed to align: 2 (40.00%)\n",
+      "Reported 4 alignments\n"
+     ]
+    }
+   ],
    "source": [
     "bowtie_filter = BowtieFilter(bowtie_search_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByLargerRegionPolicy()\n",
@@ -420,9 +508,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n",
+      "# reads processed: 8\n",
+      "# reads with at least one alignment: 4 (50.00%)\n",
+      "# reads that failed to align: 4 (50.00%)\n",
+      "Reported 4 alignments\n",
+      "# reads processed: 7\n",
+      "# reads with at least one alignment: 2 (28.57%)\n",
+      "# reads that failed to align: 5 (71.43%)\n",
+      "Reported 2 alignments\n",
+      "# reads processed: 5\n",
+      "# reads with at least one alignment: 3 (60.00%)\n",
+      "# reads that failed to align: 2 (40.00%)\n",
+      "Reported 4 alignments\n"
+     ]
+    }
+   ],
    "source": [
     "bowtie_filter = BowtieFilter(bowtie_search_parameters_crosshyb, dir_output=dir_output)\n",
     "policy = RemoveByDegreePolicy()\n",
