make policy for exact match optional

--- a/tests/notebooks/test_oligo_specificity_filter.ipynb
+++ b/tests/notebooks/test_oligo_specificity_filter.ipynb
@@ -16,10 +16,8 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "from oligo_designer_toolsuite.sequence_generator import CustomGenomicRegionGenerator, OligoSequenceGenerator\n",
     "from oligo_designer_toolsuite.database import OligoDatabase, ReferenceDatabase\n",
-    "from oligo_designer_toolsuite.oligo_specificity_filter import ExactMatchFilter, BlastNFilter, BlastNSeedregionFilter, BlastNSeedregionLigationsiteFilter, BowtieFilter, Bowtie2Filter, CrossHybridizationFilter, RemoveByLargerRegionPolicy, RemoveByDegreePolicy\n",
-    "from oligo_designer_toolsuite.oligo_property_filter import PropertyFilter, PadlockArmsFilter\n"
+    "from oligo_designer_toolsuite.oligo_specificity_filter import ExactMatchFilter, BlastNFilter, BlastNSeedregionFilter, BlastNSeedregionLigationsiteFilter, BowtieFilter, Bowtie2Filter, CrossHybridizationFilter, RemoveByLargerRegionPolicy, RemoveByDegreePolicy"
    ]
   },
   {
@@ -128,7 +126,8 @@
     "oligo_database_exact_match = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True, dir_output=dir_output)\n",
     "oligo_database_exact_match.load_database(file_database_oligos_exact_match)\n",
     "\n",
-    "exactmatch_filter = ExactMatchFilter()\n",
+    "policy = RemoveByLargerRegionPolicy()\n",
+    "exactmatch_filter = ExactMatchFilter(policy)\n",
     "res = exactmatch_filter.apply(sequence_type, oligo_database_exact_match, 2)\n",
     "\n",
     "assert \"WASH7P::2\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered from exact matches!\"\n",
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +473,13 @@
      "output_type": "stream",
      "text": [
       "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "# reads processed: 8\n",
       "# reads with at least one alignment: 4 (50.00%)\n",
       "# reads that failed to align: 4 (50.00%)\n",
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +521,13 @@
      "output_type": "stream",
      "text": [
       "/Users/lisa.barros/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:88: UserWarning: Overwriting database!\n",
-      "  warnings.warn(\"Overwriting database!\")\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "# reads processed: 8\n",
       "# reads with at least one alignment: 4 (50.00%)\n",
       "# reads that failed to align: 4 (50.00%)\n",
