hybridization probability filter

--- a/tests/notebooks/test_oligo_specificity_filter.ipynb
+++ b/tests/notebooks/test_oligo_specificity_filter.ipynb
@@ -170,7 +170,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_blastn.BlastNFilter'>\n"
+     ]
+    }
+   ],
    "source": [
     "sequence_type = \"target\"\n",
     "\n",
@@ -178,6 +186,7 @@
     "oligo_database_match.load_database(file_database_oligos_match)\n",
     "\n",
     "blast_filter = BlastNFilter(blast_search_parameters, blast_hit_parameters, dir_output=dir_output)\n",
+    "print(type(blast_filter))\n",
     "res = blast_filter.apply(sequence_type, oligo_database_match, 2, reference_database)\n",
     "\n",
     "assert \"WASH7P::1\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered by Blast!\""
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +203,7 @@
     "oligo_database_nomatch = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True, dir_output=dir_output)\n",
     "oligo_database_nomatch.load_database(file_database_oligos_nomatch)\n",
     "\n",
-    "blast_filter = BlastNFilter(blast_search_parameters, blast_hit_parameters, dir_output=dir_output, ai_filter=\"hybridization_probability\", ai_filter_threshold=0.0001)\n",
+    "blast_filter = BlastNFilter(blast_search_parameters, blast_hit_parameters, dir_output=dir_output)\n",
     "res = blast_filter.apply(sequence_type, oligo_database_nomatch, 2, reference_database)\n",
     "\n",
     "assert \"AGRN::1\" in res.database[\"AGRN\"].keys(), \"A non matching oligo has been filtered by Blast!\""
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -221,28 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CAAGGTGTTCTCCAGTGAAAAGTACCCTGCTC']\n",
-      "[Seq('CAAGGTGTTCTCCAGTGCCAAGTACCCTGCTC')]\n",
-      "['CAAGGTGTTCTCCAGTGAAAAGTACCCTGCTC']\n",
-      "[Seq('CAAGGTGTTCTCCAGTGCCAAGTACCCTGCTC')]\n"
+      "[('AlignmentSpecificityFilter', <class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_base.AlignmentSpecificityFilter'>), ('BlastNFilter', <class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_blastn.BlastNFilter'>), ('BlastNSeedregionFilter', <class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_blastn.BlastNSeedregionFilter'>), ('BlastNSeedregionFilterBase', <class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_blastn.BlastNSeedregionFilterBase'>), ('BlastNSeedregionLigationsiteFilter', <class 'oligo_designer_toolsuite.oligo_specificity_filter._filter_blastn.BlastNSeedregionLigationsiteFilter'>), ('NcbiblastnCommandline', <class 'Bio.Blast.Applications.NcbiblastnCommandline'>), ('NcbimakeblastdbCommandline', <class 'Bio.Blast.Applications.NcbimakeblastdbCommandline'>), ('OligoDatabase', <class 'oligo_designer_toolsuite.database._oligos_database.OligoDatabase'>), ('Path', <class 'pathlib.Path'>), ('ReferenceDatabase', <class 'oligo_designer_toolsuite.database._reference_database.ReferenceDatabase'>)]\n"
      ]
     }
    ],
    "source": [
+    "from oligo_designer_toolsuite.oligo_specificity_filter import _filter_blastn\n",
+    "import inspect\n",
     "sequence_type = \"target\"\n",
     "seedregion_size = 10\n",
     "\n",
     "oligo_database_ligation_match = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True, dir_output=dir_output)\n",
     "oligo_database_ligation_match.load_database(file_database_oligos_ligation_match)\n",
     "\n",
-    "blast_ligation_filter = BlastNSeedregionLigationsiteFilter(seedregion_size, blast_search_parameters, blast_hit_parameters, dir_output=dir_output,  ai_filter=\"hybridization_probability\", ai_filter_threshold=0.0001)\n",
+    "blast_ligation_filter = BlastNSeedregionLigationsiteFilter(seedregion_size, blast_search_parameters, blast_hit_parameters, dir_output=dir_output)\n",
     "res = blast_ligation_filter.apply(sequence_type, oligo_database_ligation_match, 2, reference_database_ligation)\n",
     "\n",
     "assert \"WASH7P::1\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered by Blast!\""
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +268,7 @@
     "oligo_database_ligation_nomatch = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True, dir_output=dir_output)\n",
     "oligo_database_ligation_nomatch.load_database(file_database_oligos_ligation_nomatch)\n",
     "\n",
-    "blast_ligation_filter = BlastNSeedregionLigationsiteFilter(seedregion_size, blast_search_parameters, blast_hit_parameters, dir_output=dir_output, ai_filter=\"hybridization_probability\", ai_filter_threshold=0.0001)\n",
+    "blast_ligation_filter = BlastNSeedregionLigationsiteFilter(seedregion_size, blast_search_parameters, blast_hit_parameters, dir_output=dir_output)\n",
     "res = blast_ligation_filter.apply(sequence_type, oligo_database_ligation_nomatch, 2, reference_database_ligation)\n",
     "\n",
     "assert \"AGRN::1\" in res.database[\"AGRN\"].keys(), \"A non matching oligo has been filtered by Blast!\""
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +337,7 @@
     "oligo_database_match = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True, dir_output=dir_output)\n",
     "oligo_database_match.load_database(file_database_oligos_match)\n",
     "\n",
-    "bowtie_filter = BowtieFilter(bowtie_search_parameters, dir_output=dir_output, ai_filter=\"hybridization_probability\", ai_filter_threshold=0.0001)\n",
+    "bowtie_filter = BowtieFilter(bowtie_search_parameters, dir_output=dir_output)\n",
     "res = bowtie_filter.apply(sequence_type, oligo_database_match, 2, reference_database)\n",
     "\n",
     "assert \"WASH7P::1\" not in res.database[\"WASH7P\"].keys(), \"A matching oligo has not been filtered by Bowtie!\""
@@ -337,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +740,7 @@
     "oligo_database = OligoDatabase()\n",
     "oligo_database.database = dict\n",
     "oligo_database.save_database()\n",
-    "blast_filter = BlastNFilter(blast_search_parameters, blast_hit_parameters, dir_output=dir_output, ai_filter=\"hybridization_probability\", ai_filter_threshold=0)\n",
+    "blast_filter = BlastNFilter(blast_search_parameters, blast_hit_parameters, dir_output=dir_output)\n",
     "res = blast_filter.apply(\"target\", oligo_database, 2, reference_database)\n",
     "print(res.database)\n"
    ]
@@ -746,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -795,14 +803,14 @@
     "    }\n",
     "oligo_database = OligoDatabase()\n",
     "oligo_database.database = dict\n",
-    "bowtie_filter = BowtieFilter(bowtie_search_parameters, dir_output=dir_output, ai_filter=\"hybridization_probability\", ai_filter_threshold=0.0001)\n",
+    "bowtie_filter = BowtieFilter(bowtie_search_parameters, dir_output=dir_output)\n",
     "res = bowtie_filter.apply(\"target\", oligo_database, 2, reference_database)\n",
     "print(res.database)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
