pull request changes

--- a/tests/notebooks/test_oligo_specificity_filter.ipynb
+++ b/tests/notebooks/test_oligo_specificity_filter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,6 +829,102 @@
     "    new_list.append(Seq(elem))\n",
     "    new_list.append(Seq(reverse_complement(elem)))\n",
     "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/francesco/Documents/Work/Oligo/oligo-designer-toolsuite/oligo_designer_toolsuite/database/_reference_database.py:89: UserWarning: Overwriting database!\n",
+      "  warnings.warn(\"Overwriting database!\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[         query    reference  ...  reference_region_id  min_alignment_length\n",
+      "0    region::0  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "1    region::1  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "2    region::2  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "4    region::3  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "6    region::4  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "8    region::5  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "10   region::6  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "12   region::7  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "14   region::8  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "15   region::9  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "16  region::10  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "17  region::11  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "18  region::12  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "19  region::13  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "20  region::14  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "21  region::15  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "22  region::16  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "23  region::17  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "24  region::18  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "25  region::19  NM_130786.4  ...          NM_130786.4                  20.0\n",
+      "\n",
+      "[20 rows x 14 columns]]\n",
+      "[1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oligo_designer_toolsuite.oligo_specificity_filter import HybridizationProbabilityFilter\n",
+    "from oligo_designer_toolsuite_ai_filters.api import APIBase\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "FILE_DATABASE_REFERENCE = \"../../data/tests/databases/database_reference.fna\"\n",
+    "FILE_DATABASE_OLIGOS_AI = \"../../data/tests/databases/database_oligos_ai.tsv\"\n",
+    "FILE_TABLE_HITS_BLAST_AI = \"../../data/tests/table_hits/table_hits_blast_ai.tsv\"\n",
+    "FILE_TABLE_HITS_BOWTIE_AI = \"../../data/tests/table_hits/table_hits_bowtie_ai.tsv\"\n",
+    "\n",
+    "class DummyAPI(APIBase):\n",
+    "    # Class that considers real hits all the hits that have a 100% match\n",
+    "    def predict(self, queries,gapped_queries,references,gapped_references):\n",
+    "        predictions = np.ndarray(shape=(len(queries),), dtype=np.float32)\n",
+    "        for i, (q, r) in enumerate(zip(gapped_queries, gapped_references)):\n",
+    "            if q == r:\n",
+    "                predictions[i] = 1\n",
+    "            else:\n",
+    "                predictions[i] = 0\n",
+    "        return predictions\n",
+    "    \n",
+    "tmp_path = os.path.join(os.getcwd(), \"tmp_hybridization_probability_outputs\")\n",
+    "blast_search_parameters = blast_search_parameters = {\"perc_identity\": 80, \"strand\": \"both\", \"word_size\": 10}\n",
+    "blast_hit_parameters = {\"coverage\": 50}\n",
+    "alignment_filter = BlastNFilter(\n",
+    "    blast_search_parameters=blast_search_parameters, \n",
+    "    blast_hit_parameters=blast_hit_parameters, \n",
+    "    dir_output=tmp_path\n",
+    ")\n",
+    "filter = HybridizationProbabilityFilter(alignment_method=alignment_filter, threshold=0.1)\n",
+    "filter.model = DummyAPI()\n",
+    "database = OligoDatabase(dir_output=tmp_path)\n",
+    "database.load_database(FILE_DATABASE_OLIGOS_AI)\n",
+    "reference_database = ReferenceDatabase(dir_output=tmp_path)\n",
+    "reference_database.load_sequences_from_fasta(file_fasta=FILE_DATABASE_REFERENCE, database_overwrite=True)\n",
+    "table_hits = pd.read_csv(FILE_TABLE_HITS_BLAST_AI, sep=\"\\t\")\n",
+    "sequence_type = \"target\"\n",
+    "region_id = \"region\"\n",
+    "\n",
+    "filtered_database = filter.apply(\n",
+    "    sequence_type=sequence_type,\n",
+    "    oligo_database=database,\n",
+    "    n_jobs=2,\n",
+    "    reference_database=reference_database,\n",
+    ")\n",
+    "returned_oligos = set(filtered_database.database[\"region\"].keys())\n",
+    "expected_oligos = set(f\"region::{i}\" for i in range(2, 20))\n",
+    "\n",
+    "assert returned_oligos == expected_oligos, f\"The Blast ai filter didn't return the expected oligos. \\n\\nExpected:\\n{expected_oligos}\\n\\nGot:\\n{returned_oligos}\"\n"
    ]
   }
  ],
